finished parsing for function

--- a/Labs/Lab02/frontend/templates/form_submitted.html
+++ b/Labs/Lab02/frontend/templates/form_submitted.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
-	<h1>Success</h1>
-	<h2>Text</h2>
-	{{ form.text.data }}
+<h1>Success</h1>
+<h2>Text</h2>
+{{ result.text }}
+<h2>Datetime</h2>
+{{ result.datetime }}
 {% endblock %}
