--- a/Labs/Lab02/frontend/templates/form.html
+++ b/Labs/Lab02/frontend/templates/form.html
@@ -2,12 +2,21 @@
 {% block content %}
 <h1>Feedback</h1>
 <form action="" method="post" novalidate>
-	{{ form.hidden_tag() }}
-	<p>{{ form.text.label }}<br> {{ form.text() }}</p>
-	{% for error in form.text.errors %}
-	<span style="color: red;">[{{ error }}]</span>
-	{% endfor %}
-	<p>{{ form.submit() }}</p>
+        {{ form.hidden_tag() }}
+        <p>{{ form.text.label }}<br> {{ form.text() }}</p>
+        {% for error in form.text.errors %}
+        <span style="color: red;">[{{ error }}]</span>
+        {% endfor %}
+        <p>{{ form.submit() }}</p>
 </form>
+<h2>Links</h2>
+<ul>
+        <li>
+                <a href="https://europe-west6-daring-runway-326914.cloudfunctions.net/display-state-info">Overview</a>
+        </li>
+        <li>
+                <a href="https://europe-west6-nomadic-line-328315.cloudfunctions.net/statisticsJava">Analytics</a>
+        </li>
+</ul>
 {% endblock %}
 
